[tool.poetry]
name = "uatiari"
version = "0.1.0"
description = "XP-based code review agent"
authors = ["Luís Fernando Guedes"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.4.10"
langchain-google-genai = "^2.0.5"
python-dotenv = "^1.0.0"
rich = "^14.2.0"
langgraph-checkpoint = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
langgraph-cli = {extras = ["inmem"], version = "^0.4.11"}

[tool.poetry.scripts]
uatiari = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
