[tool.poetry]
name = "uatiari"
version = "0.1.4"
description = "XP-based code review agent"
authors = ["Luís Fernando Guedes"]
readme = "README.md"
packages = [{include = "uatiari", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
langgraph = "^0.2.45"
langchain-google-genai = "^2.0.5"
python-dotenv = "^1.0.0"
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
uatiari = "uatiari.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]
